# Master_Study_Courses

C++_Practice/Function_1/: CMakeLists.txt
C++_Practice/Function_1/src/: main.cpp
C++_Practice/Function_2/: CMakeLists.txt
CIT323000_Concept_of_CPP/a00/: CMakeLists.txt
CIT323000_Concept_of_CPP/a01/mandelbrot/: CMakeLists.txt
CIT323000_Concept_of_CPP/a01/mandelbrot/src/: mandelbrot.cpp
CIT323000_Concept_of_CPP/a01/simplevm/: CMakeLists.txt  simplevm.cpp
CIT323000_Concept_of_C_Plus_Programming/a00/: main.cpp
CPP_Practice/Array_And_Vectors/: CMakeLists.txt
CPP_Practice/Array_And_Vectors/src/: main.cpp
CPP_Practice/Function_2/src/: main.cpp
CPP_Practice/Function_overleaping/: CMakeLists.txt
CPP_Practice/Function_overleaping/src/: main.cpp
CPP_Practice/Lambda_Function/: CMakeLists.txt
CPP_Practice/Lambda_Function/src/: main.cpp
CPP_Practice/OOP_1/: CMakeLists.txt
CPP_Practice/OOP_1/src/: main.cpp
CPP_Practice/dictionary/: CMakeLists.txt
CPP_Practice/dictionary/src/: main.cpp
CPP_Practice/tuple/: CMakeLists.txt
CPP_Practice/tuple/src/: main.cpp
IN2228_Computer_Vision_Multiple_View_Geometry/: environment.yml
IN2228_Computer_Vision_Multiple_View_Geometry/E01_Mathmatical Background/: mathematical_background.ipynb
IN2228_Computer_Vision_Multiple_View_Geometry/E01_Mathmatical Background/exercise_code/: gaussian_elemination.py  meeting_point.py  null_space.py  pseudo_inverse.py
IN2228_Computer_Vision_Multiple_View_Geometry/E01_Mathmatical Background/tests/: test_pseudo_inverse.py
IN2228_Computer_Vision_Multiple_View_Geometry/E02_Prospective Projection/: camera_model.ipynb  reprojector.ipynb
IN2228_Computer_Vision_Multiple_View_Geometry/E02_Prospective Projection/exercise_code/: camera.py
IN2228_Computer_Vision_Multiple_View_Geometry/E02_Prospective Projection/tests/: base_tests.py  test_relative_pose.py  test_reprojection.py
IN2228_Computer_Vision_Multiple_View_Geometry/E03_Optical_flow/: lucas_kanade.ipynb
IN2228_Computer_Vision_Multiple_View_Geometry/E03_Optical_flow/exercise_code/: getFlow.py  getHarrisCorners.py  utils.py
IN2392_Machine_Learning_for_3D_Geometry/E3/E3/: exercise_3.ipynb
IN2392_Machine_Learning_for_3D_Geometry/ex2_release/: exercise_2.ipynb
IN2392_Machine_Learning_for_3D_Geometry/exercise1/: exercise_1.ipynb
IN2392_Machine_Learning_for_3D_Geometry/exercise1/exercise_1/: alignment.py  export.py  implicit_function.py  marching_cubes.py  occupancy_grid.py  point_cloud.py  sdf_grid.py
Python_Practice/: Numpy_Basic.ipynb  Numpy_Linear_Algebra.ipynb  pickle.ipynb
Python_Practice/Numpy function/: L1. Introduction.ipynb  L2. Array_operation.ipynb  L3. Array_statistics_analyze.ipynb  L4. Reshape_and_Transport.ipynb  L5.Broadcasting.ipynb
